Fixes spacing of photo overlay text

--- a/CSS/spacetravel.css
+++ b/CSS/spacetravel.css
@@ -321,11 +321,17 @@ section {
     background-color: rgba(0,0,0, 0.5) ;
 }
 
+.overlay h4 {
+    line-height: 100%;
+    padding-bottom: 15px;
+}
 
 .overlay p {
     width: 100%;
     height: 100%;
     color: #fff;
+    font-size: small;
+    line-height: 100%;
 }
 
 
@@ -333,7 +339,7 @@ section {
     color: #C9BDAA;
     margin-top: 5%;
     line-height: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
 }
 
 
